fix: github icon alignment with text

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1591,7 +1591,9 @@ nav.c-pagination {
     padding-right: 1rem;
     margin-inline-start: 0;
     margin-block-end: 1rem;
-    padding-inline-end: 1rem; }
+    padding-inline-end: 1rem;
+    display: flex;
+    align-items: baseline; }
   .eslint-versions .c-icon {
     margin-right: .5rem;
     margin-inline-end: .5rem; }
